force-app/main/default/objects/DriverSchedule__c/DriverSchedule__c.object-meta.xml
<CustomObject>
    <label>勤務情報</label>
    <nameField>
        <label>勤務情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>