force-app/main/default/objects/DriverSchedule__c/fields/AttendanceTime__c.field-meta.xml
<CustomField>
    <fullName>AttendanceTime__c</fullName>
    <label>出勤時間</label>
    <type>Time</type>
</CustomField>