force-app/main/default/objects/DriverSchedule__c/fields/ConsecutiveWorkDays__c.field-meta.xml
<CustomField>
    <fullName>ConsecutiveWorkDays__c</fullName>
    <label>連続勤務日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>