force-app/main/default/objects/DriverSchedule__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>出勤日</description>
    <label>日付</label>
    <required>true</required>
    <type>Date</type>
</CustomField>