force-app/main/default/objects/DriverSchedule__c/fields/DepartureDate__c.field-meta.xml
<CustomField>
    <fullName>DepartureDate__c</fullName>
    <label>退勤日</label>
    <type>Date</type>
</CustomField>