force-app/main/default/objects/DriverSchedule__c/fields/DepartureDateTime_F__c.field-meta.xml
<CustomField>
    <fullName>DepartureDateTime_F__c</fullName>
    <formula>DATETIMEVALUE(Text(YEAR( DepartureDate__c )) + &apos;-&apos; + LPAD(Text(MONTH(Date__c)), 2,&apos;0&apos;) + &apos;-&apos; + LPAD(Text(DAY(Date__c)),2,&apos;0&apos;) + &apos; &apos; + SUBSTITUTE( Text( DepartureTime__c ), &apos;.000&apos;, &apos;&apos;)) +9/24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>退社日時</label>
    <type>DateTime</type>
</CustomField>