force-app/main/default/objects/DriverSchedule__c/fields/DepartureTime__c.field-meta.xml
<CustomField>
    <fullName>DepartureTime__c</fullName>
    <label>退勤時間</label>
    <type>Time</type>
</CustomField>