force-app/main/default/objects/DriverSchedule__c/fields/Dispatched_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_Cnt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>配車済件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>