force-app/main/default/objects/DriverSchedule__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ドライバー</label>
    <referenceTo>DriverMaster__c</referenceTo>
    <relationshipName>Drivers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>