force-app/main/default/objects/DriverSchedule__c/fields/DriverName__c.field-meta.xml
<CustomField>
    <fullName>DriverName__c</fullName>
    <formula>Driver__r.Name</formula>
    <label>ドライバー名</label>
    <type>Text</type>
</CustomField>