force-app/main/default/objects/DriverSchedule__c/fields/EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>EmploymentStatus__c</fullName>
    <label>就業</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WorkDay</fullName>
                <label>出勤</label>
            </value>
            <value>
                <fullName>DayOff</fullName>
                <label>有休</label>
            </value>
            <value>
                <fullName>SpecialOff</fullName>
                <label>特別休</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>