force-app/main/default/objects/DriverSchedule__c/fields/IsLessThan9HoursBreak__c.field-meta.xml
<CustomField>
    <fullName>IsLessThan9HoursBreak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>勤務間9h未満</label>
    <type>Checkbox</type>
</CustomField>