force-app/main/default/objects/DriverSchedule__c/fields/IsOvertime15Hours__c.field-meta.xml
<CustomField>
    <fullName>IsOvertime15Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>拘束時間15h超過</label>
    <type>Checkbox</type>
</CustomField>