force-app/main/default/objects/DriverSchedule__c/fields/RestTime__c.field-meta.xml
<CustomField>
    <fullName>RestTime__c</fullName>
    <label>休憩時間</label>
    <type>Time</type>
</CustomField>