force-app/main/default/objects/DriverSchedule__c/fields/StampedAttendanceTime__c.field-meta.xml
<CustomField>
    <fullName>StampedAttendanceTime__c</fullName>
    <label>打刻出勤(出社退社)</label>
    <type>Time</type>
</CustomField>