force-app/main/default/objects/DriverSchedule__c/fields/StampedDepartureTime__c.field-meta.xml
<CustomField>
    <fullName>StampedDepartureTime__c</fullName>
    <label>打刻退勤(出社退社)</label>
    <type>Time</type>
</CustomField>