force-app/main/default/objects/DriverSchedule__c/fields/TotalTime_F__c.field-meta.xml
<CustomField>
    <fullName>TotalTime_F__c</fullName>
    <formula>TEXT(FLOOR((DepartureTime__c - AttendanceTime__c) / 3600000)) &amp; &quot;:&quot; &amp;  
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((DepartureTime__c - AttendanceTime__c), 3600000) / 60000)), 2) &amp; &quot;:&quot; &amp;  
RIGHT(&quot;0&quot; &amp; TEXT(FLOOR(MOD((DepartureTime__c - AttendanceTime__c), 60000) / 1000)), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>拘束時間</label>
    <type>Text</type>
</CustomField>