force-app/main/default/objects/DriverSchedule__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>{!Driver__c}+YYYYMMDDを設定する</description>
    <externalId>true</externalId>
    <label>一意キー</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>