force-app/main/default/objects/DriverSchedule__c/fields/WorkStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkStatus__c</fullName>
    <label>勤務状況</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WorkDay</fullName>
                <default>true</default>
                <label>勤務</label>
            </value>
            <value>
                <fullName>DayOff</fullName>
                <label>休み（有給）</label>
            </value>
            <value>
                <fullName>WeeklyOff</fullName>
                <label>定休</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>