force-app/main/default/objects/DriverSchedule__c/fields/WorkTime__c.field-meta.xml
<CustomField>
    <fullName>WorkTime__c</fullName>
    <label>労働時間</label>
    <type>Time</type>
</CustomField>