force-app/main/default/objects/DriverSchedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Driver__c</columns>
    <columns>WorkStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>